# ro-crate_snakemake_tooling

./: .gitignore  LICENSE  README.md  Report_to_ROcrate.md
example_data/: README.txt  conda_env.yaml  example_rule.json  get_info.py  report.html  ro-crate-metadata.json  rules.json
snakemake-report-plugin-wrroc/: README.md  pyproject.toml
snakemake-report-plugin-wrroc/.github/workflows/: release-please.yml
snakemake-report-plugin-wrroc/snakemake_report_plugin_wrroc/: __init__.py
snakemake-report-plugin-wrroc/tests/: tests.py
